docs/api/qiskit/0.19/qiskit.circuit.library.RCCXGate.mdx
---
title: RCCXGate (v0.19)
description: API reference for qiskit.circuit.library.RCCXGate in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.RCCXGate
---

# RCCXGate

<Class id="qiskit.circuit.library.RCCXGate" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/circuit/library/standard_gates/x.py" signature="RCCXGate(label=None)" modifiers="class">
  The simplified Toffoli gate, also referred to as Margolus gate.

  The simplified Toffoli gate implements the Toffoli gate up to relative phases. This implementation requires three CX gates which is the minimal amount possible, as shown in [https://arxiv.org/abs/quant-ph/0312225](https://arxiv.org/abs/quant-ph/0312225). Note, that the simplified Toffoli is not equivalent to the Toffoli. But can be used in places where the Toffoli gate is uncomputed again.

  This concrete implementation is from [https://arxiv.org/abs/1508.03273](https://arxiv.org/abs/1508.03273), the dashed box of Fig. 3.

  Create a new simplified CCX gate.

  ## Attributes

  <span id="rccxgate-decompositions" />

  ### decompositions

  <Attribute id="qiskit.circuit.library.RCCXGate.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  <span id="rccxgate-definition" />

  ### definition

  <Attribute id="qiskit.circuit.library.RCCXGate.definition">
    Return definition in terms of other basic gates.
  </Attribute>

  <span id="rccxgate-label" />

  ### label

  <Attribute id="qiskit.circuit.library.RCCXGate.label" attributeTypeHint="str">
    Return gate label

    **Return type**

    `str`
  </Attribute>

  <span id="rccxgate-params" />

  ### params

  <Attribute id="qiskit.circuit.library.RCCXGate.params">
    return instruction params.
  </Attribute>

  ## Methods

  <span id="rccxgate-add-decomposition" />

  ### add\_decomposition

  <Function id="qiskit.circuit.library.RCCXGate.add_decomposition" signature="RCCXGate.add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  <span id="rccxgate-assemble" />

  ### assemble

  <Function id="qiskit.circuit.library.RCCXGate.assemble" signature="RCCXGate.assemble()">
    Assemble a QasmQobjInstruction

    **Return type**

    [`Instruction`](qiskit.circuit.Instruction "qiskit.circuit.instruction.Instruction")
  </Function>

  <span id="rccxgate-broadcast-arguments" />

  ### broadcast\_arguments

  <Function id="qiskit.circuit.library.RCCXGate.broadcast_arguments" signature="RCCXGate.broadcast_arguments(qargs, cargs)">
    Validation and handling of the arguments and its relationship.

    For example, `cx([q[0],q[1]], q[2])` means `cx(q[0], q[2]); cx(q[1], q[2])`. This method yields the arguments in the right grouping. In the given example:

    ```python
    in: [[q[0],q[1]], q[2]],[]
    outs: [q[0], q[2]], []
          [q[1], q[2]], []
    ```

    The general broadcasting rules are:

    > *   If len(qargs) == 1:
    >
    >     ```python
    >     [q[0], q[1]] -> [q[0]],[q[1]]
    >     ```
    >
    > *   If len(qargs) == 2:
    >
    >     ```python
    >     [[q[0], q[1]], [r[0], r[1]]] -> [q[0], r[0]], [q[1], r[1]]
    >     [[q[0]], [r[0], r[1]]]       -> [q[0], r[0]], [q[0], r[1]]
    >     [[q[0], q[1]], [r[0]]]       -> [q[0], r[0]], [q[1], r[0]]
    >     ```
    >
    > *   If len(qargs) >= 3:
    >
    >     ```python
    >     [q[0], q[1]], [r[0], r[1]],  ...] -> [q[0], r[0], ...], [q[1], r[1], ...]
    >     ```

    **Parameters**

    *   **qargs** (`List`) – List of quantum bit arguments.
    *   **cargs** (`List`) – List of classical bit arguments.

    **Return type**

    `Tuple`\[`List`, `List`]

    **Returns**

    A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  <span id="rccxgate-c-if" />

  ### c\_if

  <Function id="qiskit.circuit.library.RCCXGate.c_if" signature="RCCXGate.c_if(classical, val)">
    Add classical condition on register classical and value val.
  </Function>

  <span id="rccxgate-control" />

  ### control

  <Function id="qiskit.circuit.library.RCCXGate.control" signature="RCCXGate.control(num_ctrl_qubits=1, label=None, ctrl_state=None)">
    Return controlled version of gate. See [`ControlledGate`](qiskit.circuit.ControlledGate "qiskit.circuit.ControlledGate") for usage.

    **Parameters**

    *   **num\_ctrl\_qubits** (`Optional`\[`int`]) – number of controls to add to gate (default=1)
    *   **label** (`Optional`\[`str`]) – optional gate label
    *   **ctrl\_state** (`Union`\[`int`, `str`, `None`]) – The control state in decimal or as a bitstring (e.g. ‘111’). If None, use 2\*\*num\_ctrl\_qubits-1.

    **Returns**

    Controlled version of gate. This default algorithm uses num\_ctrl\_qubits-1 ancillae qubits so returns a gate of size num\_qubits + 2\*num\_ctrl\_qubits - 1.

    **Return type**

    [qiskit.circuit.ControlledGate](qiskit.circuit.ControlledGate "qiskit.circuit.ControlledGate")

    **Raises**

    **QiskitError** – unrecognized mode or invalid ctrl\_state
  </Function>

  <span id="rccxgate-copy" />

  ### copy

  <Function id="qiskit.circuit.library.RCCXGate.copy" signature="RCCXGate.copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="rccxgate-inverse" />

  ### inverse

  <Function id="qiskit.circuit.library.RCCXGate.inverse" signature="RCCXGate.inverse()">
    Invert this instruction.

    If the instruction is composite (i.e. has a definition), then its definition will be recursively inverted.

    Special instructions inheriting from Instruction can implement their own inverse (e.g. T and Tdg, Barrier, etc.)

    **Returns**

    a fresh instruction for the inverse

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – if the instruction is not composite and an inverse has not been implemented for it.
  </Function>

  <span id="rccxgate-is-parameterized" />

  ### is\_parameterized

  <Function id="qiskit.circuit.library.RCCXGate.is_parameterized" signature="RCCXGate.is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  <span id="rccxgate-mirror" />

  ### mirror

  <Function id="qiskit.circuit.library.RCCXGate.mirror" signature="RCCXGate.mirror()">
    For a composite instruction, reverse the order of sub-gates.

    This is done by recursively mirroring all sub-instructions. It does not invert any gate.

    **Returns**

    a fresh gate with sub-gates reversed

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="rccxgate-power" />

  ### power

  <Function id="qiskit.circuit.library.RCCXGate.power" signature="RCCXGate.power(exponent)">
    Creates a unitary gate as gate^exponent.

    **Parameters**

    **exponent** (*float*) – Gate^exponent

    **Returns**

    To which to\_matrix is self.to\_matrix^exponent.

    **Return type**

    [qiskit.extensions.UnitaryGate](qiskit.extensions.UnitaryGate "qiskit.extensions.UnitaryGate")

    **Raises**

    **CircuitError** – If Gate is not unitary
  </Function>

  <span id="rccxgate-qasm" />

  ### qasm

  <Function id="qiskit.circuit.library.RCCXGate.qasm" signature="RCCXGate.qasm()">
    Return a default OpenQASM string for the instruction.

    Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).
  </Function>

  <span id="rccxgate-repeat" />

  ### repeat

  <Function id="qiskit.circuit.library.RCCXGate.repeat" signature="RCCXGate.repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>

  <span id="rccxgate-to-matrix" />

  ### to\_matrix

  <Function id="qiskit.circuit.library.RCCXGate.to_matrix" signature="RCCXGate.to_matrix()">
    Return a numpy.array for the simplified CCX gate.
  </Function>
</Class>

